// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`emptyCells renders 0 1`] = `
Array [
  .c0 {
  empty-cells: 0;
}

<div
    className="c0"
  />,
  .c0 {
  empty-cells: 0;
}

<div
    className="c0"
  />,
  .c0 {
  empty-cells: 0;
}

<div
    className="c0"
  />,
  .c0 {
  empty-cells: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`emptyCells renders function 1`] = `
Array [
  .c0 {
  empty-cells: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  empty-cells: has;
}

<div
    className="c0"
  />,
  .c0 {
  empty-cells: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  empty-cells: has;
}

<div
    className="c0"
  />,
]
`;

exports[`emptyCells renders invalid theme path 1`] = `
Array [
  .c0 {
  empty-cells: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  empty-cells: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  empty-cells: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  empty-cells: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`emptyCells renders negative number 1`] = `
Array [
  .c0 {
  empty-cells: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  empty-cells: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  empty-cells: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  empty-cells: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`emptyCells renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  empty-cells: July;
}

@media screen and (min-width:November) {
  .c0 {
    empty-cells: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    empty-cells: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    empty-cells: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    empty-cells: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  empty-cells: July;
}

@media screen and (min-width:November) {
  .c0 {
    empty-cells: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    empty-cells: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    empty-cells: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    empty-cells: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  empty-cells: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    empty-cells: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    empty-cells: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    empty-cells: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    empty-cells: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  empty-cells: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    empty-cells: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    empty-cells: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    empty-cells: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    empty-cells: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`emptyCells renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    empty-cells: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    empty-cells: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    empty-cells: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    empty-cells: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    empty-cells: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    empty-cells: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    empty-cells: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    empty-cells: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    empty-cells: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    empty-cells: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    empty-cells: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    empty-cells: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    empty-cells: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    empty-cells: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    empty-cells: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    empty-cells: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`emptyCells renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  empty-cells: July;
}

@media May {
  .c0 {
    empty-cells: August;
  }
}

@media April {
  .c0 {
    empty-cells: September;
  }
}

@media January {
  .c0 {
    empty-cells: November;
  }
}

@media April {
  .c0 {
    empty-cells: August;
  }
}

@media June {
  .c0 {
    empty-cells: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  empty-cells: July;
}

@media May {
  .c0 {
    empty-cells: August;
  }
}

@media April {
  .c0 {
    empty-cells: September;
  }
}

@media January {
  .c0 {
    empty-cells: November;
  }
}

@media April {
  .c0 {
    empty-cells: August;
  }
}

@media June {
  .c0 {
    empty-cells: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  empty-cells: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    empty-cells: November;
  }
}

@media April {
  .c0 {
    empty-cells: January;
  }
}

@media January {
  .c0 {
    empty-cells: December;
  }
}

@media April {
  .c0 {
    empty-cells: April;
  }
}

@media June {
  .c0 {
    empty-cells: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  empty-cells: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    empty-cells: November;
  }
}

@media April {
  .c0 {
    empty-cells: January;
  }
}

@media January {
  .c0 {
    empty-cells: December;
  }
}

@media April {
  .c0 {
    empty-cells: April;
  }
}

@media June {
  .c0 {
    empty-cells: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`emptyCells renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    empty-cells: July;
  }
}

@media April {
  .c0 {
    empty-cells: August;
  }
}

@media January {
  .c0 {
    empty-cells: September;
  }
}

@media April {
  .c0 {
    empty-cells: November;
  }
}

@media June {
  .c0 {
    empty-cells: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    empty-cells: July;
  }
}

@media April {
  .c0 {
    empty-cells: August;
  }
}

@media January {
  .c0 {
    empty-cells: September;
  }
}

@media April {
  .c0 {
    empty-cells: November;
  }
}

@media June {
  .c0 {
    empty-cells: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    empty-cells: January;
  }
}

@media April {
  .c0 {
    empty-cells: December;
  }
}

@media January {
  .c0 {
    empty-cells: April;
  }
}

@media April {
  .c0 {
    empty-cells: May;
  }
}

@media June {
  .c0 {
    empty-cells: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    empty-cells: January;
  }
}

@media April {
  .c0 {
    empty-cells: December;
  }
}

@media January {
  .c0 {
    empty-cells: April;
  }
}

@media April {
  .c0 {
    empty-cells: May;
  }
}

@media June {
  .c0 {
    empty-cells: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`emptyCells renders postitive number 1`] = `
Array [
  .c0 {
  empty-cells: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  empty-cells: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  empty-cells: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  empty-cells: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`emptyCells renders string 1`] = `
Array [
  .c0 {
  empty-cells: July;
}

<div
    className="c0"
  />,
  .c0 {
  empty-cells: July;
}

<div
    className="c0"
  />,
  .c0 {
  empty-cells: June;
}

<div
    className="c0"
  />,
  .c0 {
  empty-cells: June;
}

<div
    className="c0"
  />,
]
`;

exports[`emptyCells renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`emptyCells renders valid theme path 1`] = `
Array [
  .c0 {
  empty-cells: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  empty-cells: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  empty-cells: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  empty-cells: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
